# nimvault-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  LICENSE  MARKETPLACE.md  README.md  marketplace-entry.json  plugin.json
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
branding/: README.md
commands/: nimvault-status.md
docs/: ARCHITECTURE.md  INTEGRATIONS.md  SURVEY.md  TRANSPORTS.md
npm/: package.json
npm/scripts/: install.js
scripts/: run-mcp.sh  set-version.sh
skills/nimvault/: SKILL.md
src/: cli.rs  constants.rs  doctor.rs  inproc.rs  lib.rs  main.rs  policy.rs  serve.rs  server.rs  session.rs  setup.rs  tool_args.rs
