[package]
name = "nimvault-mcp"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "MCP server for nimvault (GPG opaque-blob vault: list, status, add, seal, unseal)"
repository = "https://github.com/HaoZeke/nimvault-mcp"
homepage = "https://nimvault.rgoswami.me"
readme = "README.md"
keywords = ["mcp", "nimvault", "gpg", "secrets", "vault"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
which = "7"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lib]
name = "nimvault_mcp"
path = "src/lib.rs"

[[bin]]
name = "nimvault-mcp"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ os-ext }"
pkg-fmt = "tgz"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
